feat: SprayCanTool, Clear, Save

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <script src="freehandTool.js"></script>
     <script src="lineToTool.js"></script>
     <script src="mirrorDrawTool.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="sprayCanTool.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-  	<div class="wrapper">
-      <div class="box header">My Drawing App
+    <div class="wrapper">
+      <div class="box header">
+        My Drawing App
 
         <button id="clearButton">Clear</button>
         <button id="saveImageButton">Save Image</button>
@@ -28,6 +29,6 @@
       <div id="content"></div>
       <div class="box colourPalette"></div>
       <div class="box options"></div>
-	</div>
+    </div>
   </body>
 </html>
